# voice-in-my-head

./: .gitignore  .nginx  CLAUDE.md  Caddyfile  assemblyai_stream.py  audio_recorder.py  audio_tracks.py  chatgpt.py  deepgram_stream.py  elevenlabs_helpers.py  generate-test-audio.py  generate_transcripts.py  helpers.py  install-service-dev.sh  install-service.sh  license.md  package-lock.json  package.json  pyproject.toml  readme.md  remove_silence.py  requirements.txt  run-dev.sh  run.sh  script_reader.py  server.py  server_async.py  srt_writer.py  tailwind.config.js  update-script.sh  vad.py  vimh.py  voice_session.py  webrtc_handler.py
_deprecated/: daily_helpers.py  echo-bot.py  server_flask.py  vad.py  vimh_daily.py
helpers/: prepare-sound.sh
scripts/: chatgpt.csv  kyle.csv  lauren.csv  script.csv
static/: index.html  run.html  style.css
static-pages/: index.html  run.html  style.css
